Fix a styling bug on the messages, where text was overflowing outside of a div Fix a bug on the user profile information saving, where an onChange handler was missing on the text input fields

--- a/client/stylesheets/components/_messageModal.sass
+++ b/client/stylesheets/components/_messageModal.sass
@@ -1,6 +1,5 @@
 .message
   border-radius: 10px
-  height: 25px
   margin: 4px 0px
   padding: 10px 0px 5px 10px
   line-height: 25px
